unpackaged/main/default/objects/BoB_Seller__c/BoB_Seller__c.object-meta.xml
<CustomObject>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Cohort Seller</label>
    <nameField>
        <displayFormat>BS-{0000000}</displayFormat>
        <label>Cohort Seller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cohort Sellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>