unpackaged/main/default/objects/BoB_Seller__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BoB_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>