unpackaged/main/default/objects/BoB_Seller__c/fields/ACCT_MNGR_L2_MNGR_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCT_MNGR_L2_MNGR_NAME__c</fullName>
    <description>US-0007128 - Managed seller - Secondary AM push to BOB DWH table - ETL</description>
    <formula>IF(ISBLANK(TTEC_MANAGER__c), &quot;TBD&quot;, (TTEC_MANAGER__r.FirstName &amp; &quot; &quot; &amp;  TTEC_MANAGER__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACCT_MNGR_L2_MNGR_NAME</label>
    <type>Text</type>
</CustomField>