unpackaged/main/default/objects/BoB_Seller__c/fields/ACCT_MNGR_L3_MNGR_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCT_MNGR_L3_MNGR_NAME__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>ACCT_MNGR_L3_MNGR_NAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>