unpackaged/main/default/objects/BoB_Seller__c/fields/ACCT_MNGR_NT__c.field-meta.xml
<CustomField>
    <fullName>ACCT_MNGR_NT__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>ACCT_MNGR_NT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>