unpackaged/main/default/objects/BoB_Seller__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields
US-0007597: Do NOT set Active__c flag for LTTM managed Seller to TRUE</description>
    <formula>if(ISPICKVAL( BoB__r.Status__c , &#39;BoB Active&#39;), if(ISPICKVAL( Status__c , &#39;Removed&#39;), false , true ) , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>