unpackaged/main/default/objects/BoB_Seller__c/fields/Actual_Standard__c.field-meta.xml
<CustomField>
    <fullName>Actual_Standard__c</fullName>
    <description>US-0007879 - LTTM BoB Seller Layout Embed Tabular Report</description>
    <formula>TEXT(Seller__r.EBH_ActualStandard__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Standard</label>
    <type>Text</type>
</CustomField>