unpackaged/main/default/objects/BoB_Seller__c/fields/ADM_L1_MNGR_NAME__c.field-meta.xml
<CustomField>
    <fullName>ADM_L1_MNGR_NAME__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>ADM_L1_MNGR_NAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>