unpackaged/main/default/objects/BoB_Seller__c/fields/ADM_NT__c.field-meta.xml
<CustomField>
    <fullName>ADM_NT__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>ADM_NT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>