unpackaged/main/default/objects/BoB_Seller__c/fields/Advisor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Comments__c</fullName>
    <description>US-0009514</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>