unpackaged/main/default/objects/BoB_Seller__c/fields/BD_YN_IND__c.field-meta.xml
<CustomField>
    <fullName>BD_YN_IND__c</fullName>
    <defaultValue>&quot;Y&quot;</defaultValue>
    <label>BD_YN_IND</label>
    <length>1</length>
    <type>Text</type>
</CustomField>