unpackaged/main/default/objects/BoB_Seller__c/fields/BoB__c.field-meta.xml
<CustomField>
    <fullName>BoB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Seller Mgmt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BOB__c.Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BOB__c</referenceTo>
    <relationshipName>BoB_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>