unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Cohort__c.field-meta.xml
<CustomField>
    <fullName>BoB_Cohort__c</fullName>
    <description>EPH-6473 BOB - SELLER RECORD &gt; RELATED Tab &gt; BOB SELLERS SECTION &gt; ADD ADDTIONAL FIELDS</description>
    <formula>BoB__r.Bob_Cohort__c</formula>
    <label>Managed Cohort</label>
    <type>Text</type>
</CustomField>