unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>BoB_Date_Activated__c</fullName>
    <description>EPH-6473 BOB - SELLER RECORD &gt; RELATED Tab &gt; BOB SELLERS SECTION &gt; ADD ADDTIONAL FIELDS</description>
    <formula>BoB__r.Date_Activated__c</formula>
    <label>Cohort Date Activated</label>
    <type>DateTime</type>
</CustomField>