unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Managed__c.field-meta.xml
<CustomField>
    <fullName>BoB_Managed__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <formula>Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed?</label>
    <type>Checkbox</type>
</CustomField>