unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>BoB_Owner_Email__c</fullName>
    <description>US-0011429 - [PT] Email Notification to Internal users when Call outcome is updated</description>
    <label>BoB_Owner_Email</label>
    <type>Email</type>
</CustomField>