unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>BoB_Subsegment__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Managed Subsegment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
            <value>
                <fullName>AM Bolt-On</fullName>
            </value>
            <value>
                <fullName>UK MSO Charity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>