unpackaged/main/default/objects/BoB_Seller__c/fields/BoB_Vertical__c.field-meta.xml
<CustomField>
    <fullName>BoB_Vertical__c</fullName>
    <description>EPH-6473 BOB - SELLER RECORD &gt; RELATED Tab &gt; BOB SELLERS SECTION &gt; ADD ADDTIONAL FIELDS</description>
    <formula>TEXT( BoB__r.EBH_BOBVertical__c)</formula>
    <label>Managed Vertical</label>
    <type>Text</type>
</CustomField>