unpackaged/main/default/objects/BoB_Seller__c/fields/BOB_VRTCL_ID__c.field-meta.xml
<CustomField>
    <fullName>BOB_VRTCL_ID__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>BOB_VRTCL_ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>