unpackaged/main/default/objects/BoB_Seller__c/fields/Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt__c</fullName>
    <description>US-0007450 - LTTM - Managed Sellers Layout changes</description>
    <label>Call Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>