unpackaged/main/default/objects/BoB_Seller__c/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMC Not reached</fullName>
            </value>
            <value>
                <fullName>Follow up Required</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Next call scheduled</fullName>
            </value>
            <value>
                <fullName>DMC Committed</fullName>
            </value>
            <value>
                <fullName>DMC Not Committed</fullName>
            </value>
            <value>
                <fullName>Coaching ended</fullName>
            </value>
            <value>
                <fullName>Call rescheduled by seller</fullName>
            </value>
            <value>
                <fullName>Exited Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>