unpackaged/main/default/objects/BoB_Seller__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <description>US-0007598 - [LTTM] New field in BoB__c and BoB_Seller__c</description>
    <formula>BoB__r.Campaign_Code__c</formula>
    <label>Campaign Code</label>
    <type>Text</type>
</CustomField>