unpackaged/main/default/objects/BoB_Seller__c/fields/Cloned__c.field-meta.xml
<CustomField>
    <fullName>Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-6460 : CR: clone bypass validation</description>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>