unpackaged/main/default/objects/BoB_Seller__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>US-0007452 - LTTM - Managed Sellers(Initiate call)
US-0009514- rename label</description>
    <inlineHelpText>This field is updated by Marketing Cloud with Pro-Trader Seller registration details.</inlineHelpText>
    <label>Pro-Trader registration details</label>
    <type>TextArea</type>
</CustomField>