unpackaged/main/default/objects/BoB_Seller__c/fields/Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>Date_Activated__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <formula>BoB__r.Date_Activated__c</formula>
    <label>Date Activated</label>
    <type>DateTime</type>
</CustomField>