unpackaged/main/default/objects/BoB_Seller__c/fields/EBH_BOBSegment__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBSegment__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Managed Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Extended Key</fullName>
            </value>
            <value>
                <fullName>Inventory Partners</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
            <value>
                <fullName>AM Bolt-On</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Pro-Trader Cat</fullName>
            </value>
            <value>
                <fullName>PT LTAM</fullName>
            </value>
            <value>
                <fullName>LTTM</fullName>
                <isActive>false</isActive>
                <label>LTTM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>