unpackaged/main/default/objects/BoB_Seller__c/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <description>US-0007879 - LTTM BoB Seller Layout Embed Tabular Report</description>
    <formula>Seller__r.EBH_EmailOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>