unpackaged/main/default/objects/BoB_Seller__c/fields/Free_Store_Request__c.field-meta.xml
<CustomField>
    <fullName>Free_Store_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7107 BOB MGMT. - Add new fileds to BoB-Seller Object (BoB_Seller__c)</description>
    <label>Free Store Request</label>
    <type>Checkbox</type>
</CustomField>