unpackaged/main/default/objects/BoB_Seller__c/fields/INTTV_TXT__c.field-meta.xml
<CustomField>
    <fullName>INTTV_TXT__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>INTTV_TXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>