unpackaged/main/default/objects/BoB_Seller__c/fields/LastCallDate__c.field-meta.xml
<CustomField>
    <fullName>LastCallDate__c</fullName>
    <description>US-0010363 - [AU] Last Call Date to be Captured at Cohort Seller Level</description>
    <inlineHelpText>Date when Latest Call attempt happened.</inlineHelpText>
    <label>Last Call Date</label>
    <type>Date</type>
</CustomField>