unpackaged/main/default/objects/BoB_Seller__c/fields/LTTM_Group__c.field-meta.xml
<CustomField>
    <fullName>LTTM_Group__c</fullName>
    <description>US-0007540 - [LTTM] Create Actions - Feedback</description>
    <formula>HYPERLINK(&#39;/lightning/r/BOB__c/&#39; &amp; BoB__r.Id &amp;&#39;/view&#39;  ,  BoB__r.LTTM_Group__c , &#39;blank&#39;)</formula>
    <label>Seller Facing Name</label>
    <type>Text</type>
</CustomField>