unpackaged/main/default/objects/BoB_Seller__c/fields/Main_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Main_Vertical__c</fullName>
    <description>US-0009641 - New Field &quot;Main Vertical&quot; to be created in Cohort Seller for Quick Filters</description>
    <formula>TEXT(Seller__r.EBH_MainVertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Vertical</label>
    <type>Text</type>
</CustomField>