unpackaged/main/default/objects/BoB_Seller__c/fields/Managed_Type__c.field-meta.xml
<CustomField>
    <fullName>Managed_Type__c</fullName>
    <description>US-0007598 - [LTTM] New field in BoB__c and BoB_Seller__c</description>
    <formula>TEXT(BoB__r.Managed_Type__c)</formula>
    <label>Managed Type</label>
    <type>Text</type>
</CustomField>