unpackaged/main/default/objects/BoB_Seller__c/fields/MDP_RPRT_CD__c.field-meta.xml
<CustomField>
    <fullName>MDP_RPRT_CD__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>MDP_RPRT_CD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>