unpackaged/main/default/objects/BoB_Seller__c/fields/Next_Call_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Schedule_Date__c</fullName>
    <description>US-0007450 - LTTM - Managed Sellers Layout changes</description>
    <label>Next Call Schedule Date</label>
    <type>Date</type>
</CustomField>