unpackaged/main/default/objects/BoB_Seller__c/fields/Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Id__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <formula>Seller__r.EBH_OracleID__c</formula>
    <label>Oracle Id</label>
    <type>Text</type>
</CustomField>