unpackaged/main/default/objects/BoB_Seller__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>US-0009330 - [DE Pro-Trader]Create New field &quot;Signed up Date&quot;,&quot;Origin&quot; and add Comments</description>
    <inlineHelpText>This is the Seller registation source populated by Marketing Cloud.</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Message Centre</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Banner(Seller Hub)</fullName>
            </value>
            <value>
                <fullName>GCX</fullName>
            </value>
            <value>
                <fullName>Message Center Reminder</fullName>
            </value>
            <value>
                <fullName>Email Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>