unpackaged/main/default/objects/BoB_Seller__c/fields/Parent_Seller__c.field-meta.xml
<CustomField>
    <fullName>Parent_Seller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Parent Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Child_BoB_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>