unpackaged/main/default/objects/BoB_Seller__c/fields/PL_Expert__c.field-meta.xml
<CustomField>
    <fullName>PL_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0010593</description>
    <label>PL Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cohort_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>