unpackaged/main/default/objects/BoB_Seller__c/fields/Predicted_Standard__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Standard__c</fullName>
    <description>US-0007879 - LTTM BoB Seller Layout Embed Tabular Report</description>
    <formula>TEXT(Seller__r.EBH_PredictedStandard__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted Standard</label>
    <type>Text</type>
</CustomField>