unpackaged/main/default/objects/BoB_Seller__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>EPH-6570 BOB MGMT. - Add Undo Button when BOB Owner accidently removed seller</description>
    <label>Previous Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>