unpackaged/main/default/objects/BoB_Seller__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Seller does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>BoB_Sellers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>