unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Seller_Eligible__c</fullName>
    <formula>AND(ISPICKVAL(Seller__r.EBH_Status__c, &#39;Confirmed&#39;), NOT( ISPICKVAL( Seller__r.EBH_ActualStandard__c , &#39;Below Standard&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Eligible</label>
    <type>Checkbox</type>
</CustomField>