unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Seller_Email_Address__c</fullName>
    <description>US-0008203 : [LTTM] &quot;Seller Email Address&quot; to be added in BoB Seller</description>
    <inlineHelpText>This is the Seller Registration eMail address as entered by the seller in the Seller Landing Page during registration and value updated in HIVE by Marketing Cloud.</inlineHelpText>
    <label>Seller Email Address</label>
    <type>Email</type>
</CustomField>