unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Invited__c.field-meta.xml
<CustomField>
    <fullName>Seller_Invited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007450 - LTTM - Managed Sellers Layout changes
US-0009329 - [DE Pro-Trader]New  &quot;Seller Eligible&quot; flag in Cohort Seller</description>
    <label>Seller Eligible Not in use</label>
    <type>Checkbox</type>
</CustomField>