unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <description>US-0007879 - LTTM BoB Seller Layout Embed Tabular Report</description>
    <formula>Seller__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Name</label>
    <type>Text</type>
</CustomField>