unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Signed_up__c.field-meta.xml
<CustomField>
    <fullName>Seller_Signed_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007450 - LTTM - Managed Sellers Layout changes</description>
    <inlineHelpText>This field will be updated by Marketing cloud once seller signs up
  from the Landing page.</inlineHelpText>
    <label>Seller Signed up</label>
    <type>Checkbox</type>
</CustomField>