unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Signed_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Seller_Signed_up_Date__c</fullName>
    <description>US-0009330 - [DE Pro-Trader]Create New field &quot;Signed up Date&quot;,&quot;Origin&quot; and add Comments</description>
    <label>Seller Signed up Date</label>
    <type>DateTime</type>
</CustomField>