unpackaged/main/default/objects/BoB_Seller__c/fields/Seller_Status__c.field-meta.xml
<CustomField>
    <fullName>Seller_Status__c</fullName>
    <description>US-0007879 - LTTM BoB Seller Layout Embed Tabular Report</description>
    <formula>TEXT(Seller__r.EBH_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Status</label>
    <type>Text</type>
</CustomField>