unpackaged/main/default/objects/BoB_Seller__c/fields/SELLER_STS_CD__c.field-meta.xml
<CustomField>
    <fullName>SELLER_STS_CD__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>SELLER_STS_CD</label>
    <length>4</length>
    <type>Text</type>
</CustomField>