unpackaged/main/default/objects/BoB_Seller__c/fields/SellerNotInvitedReason__c.field-meta.xml
<CustomField>
    <fullName>SellerNotInvitedReason__c</fullName>
    <description>US-0007672 - &quot;Light Touch Seller Layout&quot; page layout,New field and help text updates</description>
    <label>Seller not Invited Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <label>Invited by email or Message Centre</label>
            </value>
            <value>
                <fullName>To be Invited</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Eligible - no emails nor MCs opted-in</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
                <isActive>false</isActive>
                <label>Suppressed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>