unpackaged/main/default/objects/BoB_Seller__c/fields/Set_business_policies__c.field-meta.xml
<CustomField>
    <fullName>Set_business_policies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7107 BOB MGMT. - Add new fileds to BoB-Seller Object (BoB_Seller__c)</description>
    <label>Set business policies</label>
    <type>Checkbox</type>
</CustomField>