unpackaged/main/default/objects/BoB_Seller__c/fields/SPL_PRICE_CNTRCT_IND__c.field-meta.xml
<CustomField>
    <fullName>SPL_PRICE_CNTRCT_IND__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>SPL_PRICE_CNTRCT_IND</label>
    <length>1</length>
    <type>Text</type>
</CustomField>