unpackaged/main/default/objects/BoB_Seller__c/fields/SRNumber__c.field-meta.xml
<CustomField>
    <fullName>SRNumber__c</fullName>
    <description>US-0010363 - [AU] Last Call Date to be Captured at Cohort Seller Level</description>
    <label>SR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>