unpackaged/main/default/objects/BoB_Seller__c/fields/Store_Subscription_Request__c.field-meta.xml
<CustomField>
    <fullName>Store_Subscription_Request__c</fullName>
    <description>EPH-7107 BOB MGMT. - Add new fileds to BoB-Seller Object (BoB_Seller__c)</description>
    <label>Store Subscription Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Featured/Premium (Top Shop)</fullName>
            </value>
            <value>
                <fullName>Anchor (Premium)</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
            <value>
                <fullName>No Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>