unpackaged/main/default/objects/BoB_Seller__c/fields/SWL_GMV_Request__c.field-meta.xml
<CustomField>
    <fullName>SWL_GMV_Request__c</fullName>
    <description>EPH-7107 BOB MGMT. - Add new fileds to BoB-Seller Object (BoB_Seller__c)</description>
    <label>SWL GMV Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>