unpackaged/main/default/objects/BoB_Seller__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <description>US-0007598 - [LTTM] New field in BoB__c and BoB_Seller__c</description>
    <label>Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning (9 AM to 12 PM)</fullName>
            </value>
            <value>
                <fullName>Afternoon(1 PM to 5 PM)</fullName>
                <label>Afternoon (1 PM to 5 PM)</label>
            </value>
            <value>
                <fullName>After Noon (1 AM to 5 PM)</fullName>
                <isActive>false</isActive>
                <label>After Noon (1 AM to 5 PM)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>