unpackaged/main/default/objects/BoB_Seller__c/fields/TTEC_MANAGER__c.field-meta.xml
<CustomField>
    <fullName>TTEC_MANAGER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7776 New BoB Fields to be added in BoB Object for AU</description>
    <label>Secondary AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>