unpackaged/main/default/objects/BoB_Seller__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>US-0007333 - LTTM - Bulk Upload BoB Sellers</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>