unpackaged/main/default/objects/BoB_Seller__c/recordTypes/LTTM.recordType-meta.xml
<RecordType>
    <fullName>LTTM</fullName>
    <active>true</active>
    <label>LTTM</label>
</RecordType>